--- a/secrets.toml
+++ b/secrets.toml
@@ -1,4 +1,2 @@
-[twilio]
-account_sid = "ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-auth_token = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
-from_phone = "+1234567890"
+# secrets.toml
+# اینجا می‌تونی کلیدهای خصوصی آینده رو بذاری
