--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
 streamlit
-sqlite3-bro
-hashlib
-folium
-streamlit-folium
+sqlite3
 requests
-
+pandas
+folium
+plotly
+pillow
+scikit-learn
+jdatetime
+arabic-reshaper
+python-bidi
+matplotlib
+wordcloud
+networkx
+faker
+streamlit-echarts
+pytz
+python-multipart
+email-validator
+streamlit-folium
